exclude travis-ci testing of puppet < 3.2 with ruby >= 2.0

--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,12 @@
-`v1.0.1
-=======
+`v1.0.1`
+========
 
-Joshua Hoblitt <jhoblitt@cpan.org> (3):
+Joshua Hoblitt <jhoblitt@cpan.org> (7):
       * add a Rakefile with a lint target + setup for rspec with puppetlabs_spec_helper
       * change license from GPLv2 or later to Apache 2.0
       * enable travis-ci support
+      * add a simple Changelog for the forge
+      * change module version to v1.0.1
+      * add .gitignore
+      * add basic rspec tests
 
